[package]
name = "dhcp-rs"
version = "0.1.0"
edition = "2021"
authors = ["pauliesnug"]

[dependencies]
simple_endian = "0.2"
byteorder = { version = "1.4", default-features = false }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
libc = "0.2.139"
spin = "0.9"